// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckTableHeading should match the snapshot 1`] = `
<thead>
  <SimpleTableRow
    label="Sportoviště"
    labeled={true}
    simpleTableRowData={Array []}
  />
</thead>
`;

exports[`CheckTableHeading should match the snapshot with values 1`] = `
<thead>
  <SimpleTableRow
    label="Sportoviště"
    labeled={true}
    simpleTableRowData={
      Array [
        "06:00",
        "06:30",
        "07:00",
        "07:30",
        "08:00",
        "08:30",
      ]
    }
  />
</thead>
`;
